--- a/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
+++ b/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Shapes\Line.cs" />
     <Compile Include="Shapes\Particle.cs" />
     <Compile Include="Shapes\Polygon.cs" />
+    <Compile Include="Solvers\ISequentialImpulsesJoint.cs" />
     <Compile Include="Solvers\SequentialImpulses.cs" />
     <Compile Include="Shapes\Shape.cs" />
     <Compile Include="Collections\AdvReaderWriterLock.cs" />
