--- a/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
+++ b/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
@@ -33,14 +33,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Detectors\BroadPhaseCollisionDetector.cs" />
     <Compile Include="Joints\HingeJoint.cs" />
     <Compile Include="Math2D\ALVector2D.cs" />
     <Compile Include="Math2D\BoundingBox2D.cs" />
-    <Compile Include="BroadPhaseCollisionDetector.cs" />
     <Compile Include="DataTypes\Coefficients.cs" />
     <Compile Include="DataTypes\CollisionEventArgs.cs" />
     <Compile Include="CollisionIgnorer.cs" />
-    <Compile Include="CollisionSolver.cs" />
     <Compile Include="Detectors\SweepAndPruneDetector.cs" />
     <Compile Include="DistanceGrid.cs" />
     <Compile Include="Math2D\Matrix2D.cs" />
@@ -64,6 +63,7 @@
     <Compile Include="Shapes\Line.cs" />
     <Compile Include="Shapes\Particle.cs" />
     <Compile Include="Shapes\Polygon.cs" />
+    <Compile Include="Solvers\CollisionSolver.cs" />
     <Compile Include="Solvers\ISequentialImpulsesJoint.cs" />
     <Compile Include="Solvers\SequentialImpulses.cs" />
     <Compile Include="Shapes\Shape.cs" />
