Added: ImplicitCastCollection to be used by the Solver to convert Contacts to IContact without making a copy of the contacts. Changed: all CollisionEventArgs and ICollisionInfo to return a ReadOnlyCollection of Contacts not an array. Added: CollectionEventArgs class. Added: events to PhysicsEngine for when objects are added to or removed from it. Changed: the logic of removing and adding so they will “short circuit” so to not add empty lists. Added: Some comments. Changed: the demo to display bodies added and removed based on the new events in PhysicsEngine.

--- a/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
+++ b/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
@@ -33,6 +33,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collections\ImplicitCastCollection.cs" />
+    <Compile Include="DataTypes\CollectionEventArgs.cs" />
     <Compile Include="Detectors\BroadPhaseCollisionDetector.cs" />
     <Compile Include="Joints\HingeJoint.cs" />
     <Compile Include="Math2D\ALVector2D.cs" />
