Renamed: SITag to SequentialImpulsesTag Moved: the SequentialImpulsesTag outside of the SequentialImpulsesSolver Removed: SolverVelocity from PhysicsState. Added: biasImpulse to SequentialImpulsesTag. Added: tag1 and tag2 to HidgeJoint. Added: Pending Event to IPhysicsEntity fixed: a bug that trying to add an item to the engine in a AddRange method that has already been added would corrupt the state. fixed: a few problems that made the PhysicsEngine class not threadsafe. Added: IsAdded property to IPhysicsEntity. changed: made it so the bodies effected by a joint must be added to the engine before the joint. Changed: made it so it throws ArgumentNullExceptions when you pass a null object to the Add or AddRange methods in PhysicsEngine. Added: IJoint interface.

--- a/trunk/ physics2d/Physics2DDemo/Physics2DDemo.csproj
+++ b/trunk/ physics2d/Physics2DDemo/Physics2DDemo.csproj
@@ -26,6 +26,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="SdlDotNet, Version=6.0.0.0, Culture=neutral, PublicKeyToken=26ad4f7e10c61408, processorArchitecture=MSIL">
