Physics2D.Net Added: Reduce Method to Polygon. renamed: BoundingBox2D to BoundingRectangle and moved it to the AdvanceMath.Geometry2D namespace.
AdvanceMath
renamed: RadainsToDegrees to ToDegrees
renamed: DegreesToRadains to ToRadains
changed: Vector2D angle methods/properties to use pass by reference versions.
added: Hermite and catmullRom to all the vector classes using the code in Vector2D.
added: Max and Min to all vector classes.
Removed: FromArray methods from all the Vector Classes since they were redundent.
removed: some unneeded wrapper methods from MathHelper.
Added: Geometry2D namespace and contained classes.

--- a/trunk/ physics2d/AdvanceMath/AdvanceMath.csproj
+++ b/trunk/ physics2d/AdvanceMath/AdvanceMath.csproj
@@ -35,6 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
@@ -44,6 +45,12 @@
     <Compile Include="Design\AdvBrowsableOrderAttribute.cs" />
     <Compile Include="Design\InstanceConstructorAttribute.cs" />
     <Compile Include="Design\ParseMethodAttribute.cs" />
+    <Compile Include="Geometry2D\BoundingCircle.cs" />
+    <Compile Include="Geometry2D\BoundingPolygon.cs" />
+    <Compile Include="Geometry2D\BoundingRectangle.cs" />
+    <Compile Include="Geometry2D\Line.cs" />
+    <Compile Include="Geometry2D\LineSegment.cs" />
+    <Compile Include="Geometry2D\Ray.cs" />
     <Compile Include="IO\MathReader.cs" />
     <Compile Include="Interfaces.cs" />
     <Compile Include="IO\MathWriter.cs" />
