changed: The shape object to make the inertia multiplier one of its constructors parameters.

--- a/trunk/ physics2d/Physics2DDemo/Physics2DDemo.csproj
+++ b/trunk/ physics2d/Physics2DDemo/Physics2DDemo.csproj
@@ -87,6 +87,9 @@
     <Content Include="SDL_mixer.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="SDL_ttf.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="zlib1.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
