Added: Body1 and Body2 properties to IContact. Added: the Clamped class to AdvanceMath

--- a/trunk/ physics2d/AdvanceMath/AdvanceMath.csproj
+++ b/trunk/ physics2d/AdvanceMath/AdvanceMath.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clamped.cs" />
     <Compile Include="ContainmentType.cs" />
     <Compile Include="Point2D.cs" />
     <Compile Include="Design\AdvPropertyDescriptor.cs" />
