--- a/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
+++ b/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shapes\Circle.cs" />
     <Compile Include="Shapes\Line.cs" />
+    <Compile Include="Shapes\MultiPartPolygon.cs" />
     <Compile Include="Shapes\Particle.cs" />
     <Compile Include="Shapes\Polygon.cs" />
     <Compile Include="Solvers\CollisionSolver.cs" />
@@ -82,6 +83,7 @@
     <Compile Include="Collections\ThreadSafeDictonary.cs" />
     <Compile Include="Collections\ThreadSafeList.cs" />
     <Compile Include="DataTypes\UpdatedEventArgs.cs" />
+    <Compile Include="PhysicsTimer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AdvanceMath\AdvanceMath.csproj">
