--- a/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
+++ b/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Shapes\MultiPartPolygon.cs" />
     <Compile Include="Shapes\Particle.cs" />
     <Compile Include="Shapes\Polygon.cs" />
+    <Compile Include="Shapes\RaySegments.cs" />
     <Compile Include="Solvers\CollisionSolver.cs" />
     <Compile Include="Solvers\ISequentialImpulsesJoint.cs" />
     <Compile Include="Solvers\SequentialImpulses.cs" />
