AdvanceMath: added: "#if !CompactFramework ... #endif"  statements for all non Compact framework compatible code. removed: some unneeded code that was not supported by compact framework. changed: now compiles on compact framework.
Physics2D.Net:
added: "#if !CompactFramework ... #endif"  statements for all non Compact framework compatible code.
changed: PhysicsTimer to be compatible with the Compact framework
removed: most of the classes in Collections.
Added: CFReaderWriterLock which a class to replace the .Net frameworks ReaderWriterLock class since the Compact Framework does not have it. 
Added: ReadOnlyThreadSafeList to replace all those classes in collections.
changed: some code to be do things in a more compact framework friendly manner.
changed: now compiles on compact framework.

--- a/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
+++ b/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collections\ImplicitCastCollection.cs" />
+    <Compile Include="Collections\ReadOnlyThreadSafeList.cs" />
     <Compile Include="DataTypes\CollectionEventArgs.cs" />
     <Compile Include="DataTypes\MassInfo.cs" />
     <Compile Include="DataTypes\RemovedEventArgs.cs" />
@@ -76,14 +77,6 @@
     <Compile Include="Solvers\ISequentialImpulsesJoint.cs" />
     <Compile Include="Solvers\SequentialImpulses.cs" />
     <Compile Include="Shapes\Shape.cs" />
-    <Compile Include="Collections\AdvReaderWriterLock.cs" />
-    <Compile Include="Collections\WrappedCollection.cs" />
-    <Compile Include="Collections\WrappedDictonary.cs" />
-    <Compile Include="Collections\WrappedEnumerable.cs" />
-    <Compile Include="Collections\WrappedEnumerator.cs" />
-    <Compile Include="Collections\WrappedList.cs" />
-    <Compile Include="Collections\ThreadSafeDictonary.cs" />
-    <Compile Include="Collections\ThreadSafeList.cs" />
     <Compile Include="DataTypes\UpdatedEventArgs.cs" />
     <Compile Include="PhysicsTimer.cs" />
   </ItemGroup>
