ADDED: SingleSweepDetector this broad phase kicks Sweep and Prunes butt! (inspired by the idea "the fastest code is code that is never executed") Added: BruteForceDetector this is the slowest possible broad phase for comparison purposes. added: The Serializable Attribute to more classes.

--- a/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
+++ b/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
@@ -41,6 +41,8 @@
     <Compile Include="DataTypes\MassInfo.cs" />
     <Compile Include="DataTypes\RemovedEventArgs.cs" />
     <Compile Include="Detectors\BroadPhaseCollisionDetector.cs" />
+    <Compile Include="Detectors\BruteForceDetector.cs" />
+    <Compile Include="Detectors\SingleSweepDetector.cs" />
     <Compile Include="Ignorers\CollisionGroupIgnorer.cs" />
     <Compile Include="Ignorers\CollisionIgnorer.cs" />
     <Compile Include="Ignorers\CollisionObjectIgnorer.cs" />
