--- a/trunk/ physics2d/AdvanceMath/AdvanceMath.csproj
+++ b/trunk/ physics2d/AdvanceMath/AdvanceMath.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Matrix4x4.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quaternion.cs" />
+    <Compile Include="CFFauxAttributes.cs" />
     <Compile Include="ThrowHelper.cs" />
     <Compile Include="Vector2D.cs" />
     <Compile Include="Vector3D.cs" />
