--- a/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
+++ b/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
@@ -44,9 +44,11 @@
     <Compile Include="Detectors\BruteForceDetector.cs" />
     <Compile Include="Detectors\SelectiveSweepDetector.cs" />
     <Compile Include="Detectors\SingleSweepDetector.cs" />
-    <Compile Include="Ignorers\CollisionGroupIgnorer.cs" />
-    <Compile Include="Ignorers\CollisionIgnorer.cs" />
-    <Compile Include="Ignorers\CollisionObjectIgnorer.cs" />
+    <Compile Include="Ignorers\AdvGroupIgnorer.cs" />
+    <Compile Include="Ignorers\GroupCollection.cs" />
+    <Compile Include="Ignorers\GroupIgnorer.cs" />
+    <Compile Include="Ignorers\Ignorer.cs" />
+    <Compile Include="Ignorers\ObjectIgnorer.cs" />
     <Compile Include="Joints\AngleJoint.cs" />
     <Compile Include="Joints\PivotJoint.cs" />
     <Compile Include="Joints\HingeJoint.cs" />
