--- a/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
+++ b/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
@@ -73,6 +73,7 @@
     <Compile Include="DataTypes\PhysicsState.cs" />
     <Compile Include="PhysicsLogic\VelocityLimiter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shapes\BitmapHelper.cs" />
     <Compile Include="Shapes\Circle.cs" />
     <Compile Include="Shapes\MultiPartPolygon.cs" />
     <Compile Include="Shapes\Particle.cs" />
