Added: Proxying. Body.*Proxy*, A system to make 2 object appear to be the same. can be used for asteroids style game or a 2D version of portal. Added: FrameCoherentSAPDetector. SAP = sweep and prune. Its good for very static enviroments. Contributed by Andrew D.Jones Removed: SingleSweepDetector since SelectiveSweepDetector is better.

--- a/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
+++ b/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Detectors\BroadPhaseCollisionDetector.cs" />
     <Compile Include="Detectors\BruteForceDetector.cs" />
     <Compile Include="Detectors\SelectiveSweepDetector.cs" />
-    <Compile Include="Detectors\SingleSweepDetector.cs" />
+    <Compile Include="Detectors\FrameCoherentSAPDetector.cs" />
     <Compile Include="Ignorers\AdvGroupIgnorer.cs" />
     <Compile Include="Ignorers\GroupCollection.cs" />
     <Compile Include="Ignorers\GroupIgnorer.cs" />
