--- a/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
+++ b/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="Collections\ImplicitCastCollection.cs" />
     <Compile Include="Collections\ReadOnlyThreadSafeList.cs" />
+    <Compile Include="DataTypes\BodyProxy.cs" />
     <Compile Include="DataTypes\CollectionEventArgs.cs" />
     <Compile Include="DataTypes\MassInfo.cs" />
     <Compile Include="DataTypes\RemovedEventArgs.cs" />
@@ -75,7 +76,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shapes\BitmapHelper.cs" />
     <Compile Include="Shapes\Circle.cs" />
-    <Compile Include="Shapes\MultiPartPolygon.cs" />
+    <Compile Include="Shapes\MultiPartPolygon.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Shapes\Particle.cs" />
     <Compile Include="Shapes\Polygon.cs" />
     <Compile Include="Shapes\RaySegments.cs" />
