--- a/trunk/ physics2d/AdvanceMath/AdvanceMath.csproj
+++ b/trunk/ physics2d/AdvanceMath/AdvanceMath.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="Clamped.cs" />
     <Compile Include="ContainmentType.cs" />
+    <Compile Include="Matrix2x3.cs" />
     <Compile Include="Point2D.cs" />
     <Compile Include="Design\AdvPropertyDescriptor.cs" />
     <Compile Include="Design\AdvTypeConverter%27.cs" />
