--- a/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
+++ b/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Detectors\BruteForceDetector.cs" />
     <Compile Include="Detectors\SelectiveSweepDetector.cs" />
     <Compile Include="Detectors\FrameCoherentSAPDetector.cs" />
+    <Compile Include="Detectors\SpatialHashDetector.cs" />
     <Compile Include="Ignorers\AdvGroupIgnorer.cs" />
     <Compile Include="Ignorers\GroupCollection.cs" />
     <Compile Include="Ignorers\GroupIgnorer.cs" />
