--- a/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
+++ b/trunk/ physics2d/Physics2DDotNet/Physics2DDotNet.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DataTypes\TimeStep.cs" />
     <Compile Include="Detectors\BroadPhaseCollisionDetector.cs" />
     <Compile Include="Detectors\BruteForceDetector.cs" />
+    <Compile Include="Ignorers\IgnorerCollection.cs" />
     <Compile Include="Detectors\SelectiveSweepDetector.cs" />
     <Compile Include="Detectors\FrameCoherentSAPDetector.cs" />
     <Compile Include="Detectors\SpatialHashDetector.cs" />
