Added: Body.JointAdded Added: Body.JointRemoved Changed: Moved: Shape.IgnoreVertexes To Body Changed: Moved all static methods in the Shape classes into the new VertexHelper class. Removed: the shape object now all shape directly impliment IShape.

--- a/trunk/ physics2d/ConsoleDriver/ConsoleDriver.csproj
+++ b/trunk/ physics2d/ConsoleDriver/ConsoleDriver.csproj
@@ -20,8 +20,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>ConsoleDriver</RootNamespace>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
-    <StartupObject>
-    </StartupObject>
+    <StartupObject>ConsoleDriver.Driver</StartupObject>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
