--- a/trunk/ physics2d/Graphics2DDotNet/Graphics2DDotNet.csproj
+++ b/trunk/ physics2d/Graphics2DDotNet/Graphics2DDotNet.csproj
@@ -59,18 +59,20 @@
     <Compile Include="DataTypes\ViewportMouseButtonEventArgs.cs" />
     <Compile Include="DataTypes\ViewportMouseMotionEventArgs.cs" />
     <Compile Include="Drawables\BufferedDrawable.cs" />
-    <Compile Include="Drawables\Colored3MultiPolygonDrawable.cs" />
-    <Compile Include="Drawables\Colored3PolygonDrawable.cs" />
-    <Compile Include="Drawables\Colored4MultiPolygonDrawable.cs" />
-    <Compile Include="Drawables\Colored4PolygonDrawable.cs" />
+    <Compile Include="Drawables\Colored3MultiVertexesDrawable.cs" />
+    <Compile Include="Drawables\Colored3VertexesDrawable.cs" />
+    <Compile Include="Drawables\Colored4MultiVertexesDrawable.cs" />
+    <Compile Include="Drawables\Colored4VertexesDrawable.cs" />
     <Compile Include="Drawables\IDrawable.cs" />
-    <Compile Include="Drawables\MultiPolygonDrawable.cs" />
-    <Compile Include="Drawables\PolygonDrawable.cs" />
+    <Compile Include="Drawables\MultiVertexesDrawable.cs" />
     <Compile Include="Drawables\RaysSegmentsDrawable.cs" />
     <Compile Include="Drawables\SpriteDrawable.cs" />
     <Compile Include="DataTypes\DrawInfo.cs" />
+    <Compile Include="Drawables\VertexesDrawable.cs" />
     <Compile Include="DrawProperties\Color3Property.cs" />
     <Compile Include="DrawProperties\Color4Property.cs" />
+    <Compile Include="DrawProperties\LineWidthProperty.cs" />
+    <Compile Include="DrawProperties\PointSizeProperty.cs" />
     <Compile Include="Factories\DrawableFactory.cs" />
     <Compile Include="Factories\ShapeFactory.cs" />
     <Compile Include="GlHelper.cs" />
