Added: PhysicsTimer.IsRunningChanged
I also did allot of changes to how graphics2D.Net works.

--- a/trunk/ physics2d/Physics2DDotNet.Demo/Physics2DDotNet.Demo.csproj
+++ b/trunk/ physics2d/Physics2DDotNet.Demo/Physics2DDotNet.Demo.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Demos\BallRoomDemo.cs" />
     <Compile Include="Demos\BaseDemo.cs" />
     <Compile Include="Demos\BoxesStressDemo.cs" />
+    <Compile Include="Demos\BumpMappingDemo.cs" />
     <Compile Include="Demos\CirclesContainedStressDemo.cs" />
     <Compile Include="Demos\CirclesStressDemo.cs" />
     <Compile Include="Demos\PyramidStressDemo.cs" />
