--- a/trunk/ physics2d/Graphics2DDotNet/Graphics2DDotNet.csproj
+++ b/trunk/ physics2d/Graphics2DDotNet/Graphics2DDotNet.csproj
@@ -47,18 +47,25 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Pendable.cs" />
+    <Compile Include="OpenGl\ARBArrayBuffer.cs" />
+    <Compile Include="OpenGl\MultiARBArrayBuffer.cs" />
+    <Compile Include="OpenGl\Texture2D.cs" />
     <Compile Include="Cache.cs" />
     <Compile Include="CacheMethods\FontCacheMethods.cs" />
     <Compile Include="CacheMethods\ICacheMethods.cs" />
     <Compile Include="CacheMethods\SurfaceCacheMethods.cs" />
     <Compile Include="CacheMethods\SurfacePolygonsCacheMethods.cs" />
     <Compile Include="DataTypes\DrawEventArgs.cs" />
+    <Compile Include="DataTypes\ItemEventArgs.cs" />
+    <Compile Include="DataTypes\RemovedEventArgs.cs" />
     <Compile Include="DataTypes\ScalarColor3.cs" />
     <Compile Include="DataTypes\ScalarColor4.cs" />
     <Compile Include="DataTypes\SizeEventArgs.cs" />
     <Compile Include="DataTypes\ViewportMouseButtonEventArgs.cs" />
     <Compile Include="DataTypes\ViewportMouseMotionEventArgs.cs" />
     <Compile Include="Drawables\BufferedDrawable.cs" />
+    <Compile Include="Drawables\BumpmapSpriteDrawable.cs" />
     <Compile Include="Drawables\Colored3MultiVertexesDrawable.cs" />
     <Compile Include="Drawables\Colored3VertexesDrawable.cs" />
     <Compile Include="Drawables\Colored4MultiVertexesDrawable.cs" />
@@ -77,12 +84,12 @@
     <Compile Include="Factories\ShapeFactory.cs" />
     <Compile Include="GlHelper.cs" />
     <Compile Include="Graphics\BodyGraphic.cs" />
-    <Compile Include="Graphics\IGraphic.cs" />
-    <Compile Include="Graphics\SimpleGraphic.cs" />
+    <Compile Include="Graphics\Graphic.cs" />
     <Compile Include="Animations\IAnimation.cs" />
     <Compile Include="DrawProperties\IDrawProperty.cs" />
+    <Compile Include="PendableCollection.cs" />
+    <Compile Include="Scene.cs" />
     <Compile Include="Window.cs" />
-    <Compile Include="Layer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="SurfaceBitmap.cs" />
