Changed: Body.Collided Event to only be raised on initial contact. class in the eventargs can get rest.

--- a/trunk/ physics2d/DemoRunner/DemoRunner.csproj
+++ b/trunk/ physics2d/DemoRunner/DemoRunner.csproj
@@ -5,7 +5,7 @@
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{8EF6DBBE-06D5-427B-99C8-AF396F5059C2}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DemoRunner</RootNamespace>
     <AssemblyName>DemoRunner</AssemblyName>
