added missing files

--- a/trunk/ physics2d/Physics2DDotNet.Demo/Physics2DDotNet.Demo.csproj
+++ b/trunk/ physics2d/Physics2DDotNet.Demo/Physics2DDotNet.Demo.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Demos\PyramidDemo.cs" />
     <Compile Include="Demos\RagdollDemo.cs" />
     <Compile Include="Demos\RubeGoldbergChallenge.cs" />
+    <Compile Include="Demos\ShapesDemo.cs" />
     <Compile Include="Demos\SingleTowerDemo.cs" />
     <Compile Include="Demos\SpinningArchesDemo.cs" />
     <Compile Include="Demos\SplitScreenFlightDemo.cs" />
