Added: JumpDemo Added: a new constructor for Line that takes 2 points on the line.

--- a/trunk/ physics2d/Physics2DDotNet.Demo/Physics2DDotNet.Demo.csproj
+++ b/trunk/ physics2d/Physics2DDotNet.Demo/Physics2DDotNet.Demo.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Demos\BumpMappingDemo.cs" />
     <Compile Include="Demos\CirclesContainedStressDemo.cs" />
     <Compile Include="Demos\CirclesStressDemo.cs" />
+    <Compile Include="Demos\JumpDemo.cs" />
     <Compile Include="Demos\PyramidStressDemo.cs" />
     <Compile Include="Demos\DynamicGravityDemo.cs" />
     <Compile Include="Demos\FluidDragBuoyancyDemo.cs" />
